GC Dental/src/objects/Product__c.object
<CustomObject>
    <fields>
        <fullName>Order_No__c</fullName>
        <label>Order No</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <picklist>
            <picklistValues>
                <fullName>Luting GIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restorative GIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Luting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Composite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impressioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Temporary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Price__c</fullName>
        <label>Product Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity_in_each_box__c</fullName>
        <label>Quantity in each box</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product_Family__c</columns>
        <columns>Product_Code__c</columns>
        <columns>Product_Price__c</columns>
        <columns>Product_Description__c</columns>
        <columns>Quantity_in_each_box__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>